fix navbar bugs on narrow screen

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -77,9 +77,6 @@ body {
   font-size: 110%;
   border-radius: 7%;
 }
-.navbar {
-  margin-bottom: 7px;
-}
 #navigation-container {
   height: 48px;
 }
@@ -88,13 +85,9 @@ body {
   -moz-box-shadow: -1px 3px 7px -1px rgba(0,0,0,0.75);
   box-shadow: -1px 3px 7px -1px rgba(0,0,0,0.75);
   height: 40px;
-}
-.navigation-bar-fixed {
-  /*height: auto;*/
-  position: fixed;
-  top: 0px;
-  width: 100%;
   z-index: 20;
+  position: fixed;
+  width: 100%;
 }
 /*justified navbar workaround*/
 .navbar-nav.nav-justified {
